src/test/deca/context/valid/provided/ContextSansObjet/2xhello-world.deca
{
	println("Hello");
	println("Hello world");
}
