src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationFloatAssignBool.deca
{
	float x;
	x = true;
	println(x);
}